...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="presentation.InventoryViewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/InventoryRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/createInvButton"
        app:layout_constraintEnd_toEndOf="parent"
...
